# mysqldumptab

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  mdt_str.c  mdt_str.h  mysqldumptab.c
m4/: mysql.m4
src/: Makefile.am  main.c  str.c
test/: Makefile.am  test.sh
tests/: run.sh
